# uuid_ext

./: .aiexclude  .clang-format  .gitignore  .versionrc.json  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  VERSION.md  package.json  pre-commit.in  uuid_ext.hpp.in  version.h.in  version.md.in
include/uuid_ext/: uuid.hpp  uuid_ext.hpp  version.h.in
src/: uuid.cpp
tests/: test_uuid.cpp
